packages/compiler/tests/fixtures/invalid/stdlib-functional-in-template.svelte
<script>
  let items = [{ title: "A" }, { title: "B" }];
</script>
<text>{items.map(x => x.title)}</text>
